--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,87 @@
 body {
     margin: 0 auto;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+#wrapper {
+    background-color: black;
+}
+
+header {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    /*background-image: url('your-background-image.jpg');*/
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-content {
+    text-align: center;
+}
+
+h1 {
+    font-size: 48px;
+    color: #fff;
+}
+
+h2 {
+    font-size: 24px;
+    color: #fff;
+    margin-top: 10px;
+}
+
+nav {
+    margin-top: 30px;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+}
+
+li {
+    margin: 0 10px;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+}
+
+a:hover {
+    color: #ccc;
+}
+
+section {
+    padding: 40px;
+}
+
+.scroll-down {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+#arrow-container {
+    width: 30px;
+    height: 30px;
+    border: 2px solid #fff;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#arrow-container:hover {
+    border-color: #ccc;
 }
