added more images for projects. added styling effects to portfolio cards and revised about me paragraph. added more navigation arrows to sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ header, section {
     min-height: 100vh;
     max-height: max-content;
     position: relative;
+    padding: 40px;
 }
 
 #wrapper {
@@ -37,7 +38,6 @@ header {
     position: relative;
     width: 100%;
     height: 100vh;
-    /*background-image: url();*/
     background-size: cover;
     background-position: center;
     display: flex;
@@ -86,10 +86,6 @@ nav a:hover {
     color: #ccc;
 }
 
-section {
-    padding: 40px;
-}
-
 .container-background {
     background-color: #1D1C1C;
     border-radius: 10px;
@@ -124,6 +120,36 @@ section {
     margin-bottom: 20px;
     text-align: center;
     contain: content;
+}
+
+/*.portfolio-item {*/
+/*    transition: transform 0.3s, opacity 0.3s;*/
+/*}*/
+
+/*.portfolio-items-container:hover .portfolio-item {*/
+/*    opacity: 1;*/
+/*    transform: scale(1.05);*/
+/*    z-index: 10; !* This ensures the hovered item is above others *!*/
+/*}*/
+
+/*.portfolio-items-container:hover .portfolio-item {*/
+/*    opacity: 0.6;*/
+/*}*/
+.portfolio-item {
+    transition: transform 0.3s, opacity 0.3s;
+}
+
+/* Hover effect for the portfolio item */
+.portfolio-item:hover {
+    opacity: 1!important;
+    filter: none!important;
+    transform: scale(1.05);
+    z-index: 10;
+}
+
+.portfolio-items-container:hover > .portfolio-item {
+    opacity: 0.6;
+    filter: blur(2px);
 }
 
 .item img {
