added svg file and sorted them in an array called projects in main js. commented out portfolio section in html for now until svgs are complete. will remove when complete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,18 @@ nav a:hover {
     border-radius: 5px;
 }
 
+.portfolio-container ul {
+    list-style-type: none;
+}
+
+.info-hover:hover {
+    cursor: pointer;
+}
+
+.indent {
+    text-indent: 2em
+}
+
 a.image {
     pointer-events: none;
 }
