--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
+/*font-family: 'League Spartan', sans-serif;*/
+/*font-family: 'Montserrat', sans-serif;*/
+/*font-family: 'Open Sans', sans-serif;*/
+
 body {
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #fff;
     /*overflow: hidden;*/
 }
@@ -189,6 +193,8 @@ a.image {
     width: 640px;
     height: 640px;
     flex-shrink: 0;
+    position: relative;
+    top: -48px;
 }
 .tech {
     display: flex;
@@ -201,15 +207,46 @@ a.image {
 
 .tech p {
     background-color: #fff;
-    box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+    box-shadow: 0 0 8px rgb(255 255 255 / 30%);
     color: #000!important;
-    font-family: Mulish,sans-serif!important;
-    font-weight: 600!important;
-    padding: 1rem 1.3rem;
+    font-weight: 500;
+    padding: .5rem 1rem;
+    border-radius: .5em;
+    transition: all 0.3s;
+}
+
+.tech p:hover {
+    cursor: default;
+    background-color: #ffffde;
+    box-shadow: 6px 6px 8px rgb(255 255 255 / 30%);
+    transition: all 0.4s;
 }
 
 .portfolio-content h3 {
     text-align: center;
+}
+
+.portfolio-content p {
+    color: #ffffde;
+}
+
+.links {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1em;
+    margin-top: 2em;
+}
+
+.links a {
+    text-decoration: none;
+    color: white;
+}
+
+.links a:hover {
+    color: #007bff;
+    cursor: pointer;
+    transition: color 0.3s;
 }
 /*About Section*/
 .icon-container {
