refactoring code. added a fragment to projects loop. added an observer for the project videos. working on click function for new tab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,10 @@ a.image {
     cursor: pointer;
     transition: color 0.3s;
 }
+
+.more-info {
+    cursor: pointer;
+}
 /*About Section*/
 .icon-container {
     display: flex;
