--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,36 @@ body {
     color: #fff;
 }
 
+.notification::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -5px;
+    z-index: 1;
+    background-color: rgb(204, 35, 17);
+    border: 3px solid #FFF;
+    padding-top: 5px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    animation: bounce 1s infinite
+}
+
+@keyframes bounce {
+    0%, 100%, 20%, 53%, 80% {
+        transform: translate3d(0, 0, 0);
+    }
+    40%, 43% {
+        transform: translate3d(0, -20px, 0);
+    }
+    70% {
+        transform: translate3d(0, -10px, 0);
+    }
+    90% {
+        transform: translate3d(0, -6px, 0);
+    }
+}
+
 header, section {
     min-height: 40vh;
     max-height: max-content;
